--- a/css/main.css
+++ b/css/main.css
@@ -496,7 +496,7 @@ body {
 
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 60px 800px 100px;
+    grid-template-rows: 60px 60px 600px 100px;
 }
 
 
@@ -510,4 +510,117 @@ body {
     text-align: center;
     font-size:32px;
     letter-spacing: 5px;
+}
+
+#wrapper #link #linkimgcollection {
+    grid-column: 1/-1;
+    grid-row: 3/-1;
+
+    display: flex;
+}
+
+#wrapper #link #linkimgcollection figure {
+    width:33.33%;
+
+
+    position:relative;
+}
+
+
+#wrapper #link #linkimgcollection figcaption {
+    position: absolute;
+    top:0;
+    left:0;
+} 
+
+#wrapper #link #linkimgcollection figure img {
+    width:100%;
+    height:90%;
+}
+
+
+/* ----------------------------------------------------FOOTER */
+
+
+#wrapper footer {
+
+    grid-column: 1/-1;
+    grid-row: 7/8;
+
+    background-color: #484848;
+
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr;
+}
+
+
+#wrapper footer #additionallink {
+
+    grid-column: 1/2;
+    grid-row: 1/-1;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+
+    
+}
+
+#wrapper footer #additionallink ul{
+
+    grid-column: 1/-1;
+    grid-row: 1/2;
+    display: flex;
+}
+
+#wrapper footer #additionallink ul li{
+
+list-style: none;
+margin-top:10px;
+margin-left:50px;
+}
+
+#wrapper footer #additionallink ul li a{
+
+    text-decoration: none;
+    color:#ff0;
+    font-size: 28px;    
+    }
+    
+
+#wrapper footer #additionallink figure{
+    grid-column: 1/-1;
+    grid-row: 2/-1;
+    margin-left:50px;
+    margin-top: 10px;
+
+}
+
+
+
+#wrapper footer #form {
+    margin-top: 10px;
+    grid-column: 2/-1;
+    grid-row: 1/-1;
+    margin-bottom: 30px;
+}
+
+#wrapper footer #form h2 {
+    color:#ff0;
+    margin-left:5px;
+}
+
+#wrapper footer #form input {
+    display: block;
+    margin:5px;
+
+    width:80%;
+    height:30px;
+}
+
+
+#wrapper footer #form button {
+    margin-left:70%;
+    padding:5px;
 }
